--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "samples-servlet"
 
 includeBuild("sample-build-conventions")
 include("sample-base")
+include("sample-jetty")
 include("sample-tomcat")
