Use Gradle version catalogs and typesafe project accessors

--- a/sample-jetty/build.gradle
+++ b/sample-jetty/build.gradle
@@ -8,7 +8,7 @@ application {
 }
 
 dependencies {
-    implementation(platform("org.eclipse.jetty:jetty-bom:11.0.+"))
-    implementation(project(":sample-base"))
-    implementation("org.eclipse.jetty:jetty-servlet")
+    implementation(platform(libs.jetty.bom))
+    implementation(projects.sampleBase)
+    implementation(libs.jetty.servlet)
 }
