--- a/sample-build-conventions/src/main/groovy/sample.java-conventions.gradle
+++ b/sample-build-conventions/src/main/groovy/sample.java-conventions.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation("jakarta.servlet:jakarta.servlet-api:5.0.+")
+    implementation(libs.servlet.api)
 }
 
 testing {
