--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = "samples-servlet"
 
 includeBuild("sample-build-conventions")
+
 include("sample-base")
 include("sample-jetty")
 include("sample-tomcat")
+
+enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
