--- a/sample-jetty/build.gradle
+++ b/sample-jetty/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("sample.java-conventions")
+    id("sample.java-convention")
     id("application")
 }
 
@@ -9,6 +9,6 @@ application {
 
 dependencies {
     implementation(platform(libs.jetty.bom))
-    implementation(projects.sampleBase)
+    implementation(projects.sampleSupport)
     implementation(libs.jetty.servlet)
 }
