--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,9 @@
 rootProject.name = "samples-servlet"
 
-includeBuild("sample-build-conventions")
+includeBuild("gradle/plugins")
 
-include("sample-base")
+include("sample-support")
+
 include("sample-jetty")
 include("sample-tomcat")
 
