--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,27 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        java: [17, 18]
+        java: [17, 20]
 
     steps:
       - name: Checkout Project
@@ -17,7 +30,7 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Configure JDK
+      - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: zulu
@@ -26,5 +39,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Run Build
+      - name: Run Checks
         run: ./gradlew check --stacktrace
